# macos-resolver

./: Cargo.toml  README.md  USAGE.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  file_resolver.rs  lib.rs  util.rs
tests/: integration.rs
